[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
feed-rs     = "1.3.0"
napi        = { version = "2.14.0", features = ["napi5"] }
napi-derive = "2"
num-traits  = "0.2.17"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
